<resources>
    <string name="app_name">PodCaps</string>
    <string name="podcast_name">Nenhum podcast selecionado</string>
    <string name="enter">Entrar</string>
    <string name="channel_title">Nome do meu canal de podcasts</string>
    <string name="podcast_title">Nome do podcast</string>
    <string name="podcast_name_hint">Digite o nome do podcast</string>
    <string name="podcast_description_hint">Digite a descrição</string>
    <string name="podcast_file_hint">Selecione o arquivo</string>
    <string name="channel_image_select">Selecione a imagem do canal</string>
    <string name="channel_image_storage_path">%s/images/%s</string>
    <string name="percent">%d%%</string>
    <string name="podcast_file_select">Selecione o arquivo de audio do podcast</string>
    <string name="podcast_image_select">Selecione a imagem do podcast</string>
    <string name="channel_podcast_list_empty">Você ainda não adicionou nenhum podcast</string>
    <string name="podcast_list_empty">Nenhum podcast encontrado</string>



    <string name="app_title_content_description">Titulo do aplicativo (PodCaps)</string>
    <string name="app_icon_content_description">Ícone do aplicativo (Headset).</string>
    <string name="podcast_time_content_description">Tempo do podcast.</string>
    <string name="email_login_edit_text_content_description">Digite seu email</string>
    <string name="login_button_content_description">Botão de entrar. (Clique para logar no aplicativo)</string>
    <string name="navigation_podcast_list_content_description">Opção da lista de podcasts do menu (Clique para acessar a lista de podcasts)</string>
    <string name="navigation_favorites_list_content_description">Opção de lista de podcasts favoritos do menu (Clique para acessar a lista de podcasts favoritos)</string>
    <string name="navigation_channel_content_description">Opção de canal do menu (Clique para acessar o seu canal de podcasts)</string>
    <string name="navigation_menu_content_description">Menu (Opções de acesso as telas)</string>
    <string name="podcast_title_content_description">Nome do podcast</string>
    <string name="podcast_description_content_description">Nome do podcast</string>
    <string name="podcast_control_back_content_description">Botão de voltar podcast</string>
    <string name="podcast_control_next_content_description">Botão de seguir para o próximo podcast</string>
    <string name="podcast_control_pause_content_description">Botão de pausar podcast</string>
    <string name="podcast_control_progress_content_description">Barra que demonstra o progresso do podcast</string>
    <string name="podcast_image_content_description">Capa do podcast</string>
    <string name="podcast_star_content_description">Botão de adicionar ou remover podcast a lista de favoritos</string>
    <string name="podcast_favorites_remove_content_description">Clique para remover da lista de favoritos</string>
    <string name="podcast_channel_remove_content_description">Clique para excluir este podcast</string>
    <string name="podcast_add_buttom_content_description">Clique para salvar este podcast</string>
    <string name="channel_image_content_description">Imagem do canal</string>
    <string name="my_podcast_list_content_description">Lista contendo os seus podcasts</string>
    <string name="channel_title_content_description">Titulo do canal</string>
    <string name="channel_description_content_description">Descrição do canal</string>
    <string name="channel_edit_content_description">Clique para editar o canal</string>
    <string name="favorites_podcast_list_content_description">Lista contendo os seus podcasts favoritos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_channel">Canal</string>
    <string name="title_podcast_list">Podcasts</string>
    <string name="title_favorites">Favoritos</string>
    <string name="podcast_empty_name">O nome do podcast não pode ser vazio</string>
    <string name="podcast_file_null">Selecione o arquivo de audio</string>
    <string name="podcast_file_storage_path">%s/podcasts/%s</string>
    <string name="podcast_image_storage_path">%s/images/%s</string>
    <string name="podcast_duration_zero">00:00/00:00</string>
</resources>
