<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_background">

    <ImageView
        android:id="@+id/channel_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/background_small_rounded_corners_dark_grey"
        android:contentDescription="@string/podcast_image_content_description"
        android:padding="10dp"
        android:scaleType="center"
        android:tint="@color/app_icon_light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_headset" />

    <TextView
        android:id="@+id/podcast_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/podcast_title_content_description"
        android:text="@string/podcast_title"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/channel_image"
        app:layout_constraintTop_toTopOf="@+id/channel_image" />


    <TextView
        android:id="@+id/podcast_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/podcast_description_content_description"
        android:maxLines="2"
        android:text="@string/podcast_title"
        android:textColor="@color/fount_dark_grey"
        app:layout_constraintLeft_toRightOf="@+id/channel_image"
        app:layout_constraintTop_toBottomOf="@+id/podcast_title" />


    <ImageView
        android:id="@+id/podcast_remove_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/podcast_channel_remove_content_description"
        android:scaleType="fitCenter"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete" />

</android.support.constraint.ConstraintLayout>