<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".ui.fragment.channel.ChannelFragment">

    <LinearLayout
        android:id="@+id/channel_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/channel_podcast_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/channel_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_rounded_corners_dark_grey"
            android:contentDescription="@string/channel_image_content_description"
            android:scaleType="center"
            android:tint="@color/app_icon_light_grey"
            app:srcCompat="@drawable/ic_headset" />

        <TextView
            android:id="@+id/channel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/channel_title_content_description"
            android:text="@string/channel_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/channel_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/channel_title_content_description"
            android:hint="@string/channel_title"
            android:textColorHint="@color/fount_dark_grey"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/channel_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/channel_description_content_description"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/channel_title"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/channel_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/channel_description_content_description"
            android:gravity="center"
            android:hint="@string/channel_title"
            android:paddingLeft="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/fount_dark_grey"
            android:visibility="gone" />

    </LinearLayout>

    <ImageView
        android:id="@+id/channel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/channel_edit_content_description"
        android:tint="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/channel_podcast_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/my_podcast_list_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channel_header">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_podcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_add" />


</android.support.constraint.ConstraintLayout>