<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background"
        android:orientation="vertical"
        tools:context=".ui.fragment.addPodcast.AddPodcastFragment">

    <ImageView
        android:id="@+id/podcast_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:background="@drawable/background_rounded_corners_dark_grey"
        android:contentDescription="@string/podcast_image_content_description"
        android:scaleType="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_headset" />

    <EditText
        android:id="@+id/podcast_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/podcast_name_hint"
        android:hint="@string/podcast_name_hint"
        android:textColor="@android:color/white"
        android:textColorHint="@color/fount_dark_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcast_image" />

    <EditText
        android:id="@+id/podcast_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/podcast_description_hint"
        android:hint="@string/podcast_description_hint"
        android:textColor="@android:color/white"
        android:textColorHint="@color/fount_dark_grey"
        app:backgroundTint="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcast_name" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/podcast_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/podcast_file_hint"
        android:drawableStart="@drawable/ic_folder"
        android:drawablePadding="5dp"
        android:drawableTint="@color/app_icon_grey"
        android:hint="@string/podcast_file_hint"
        android:textColor="@android:color/white"
        android:textColorHint="@color/fount_dark_grey"
        android:textStyle="bold"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcast_description" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_podcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:contentDescription="@string/podcast_description_hint"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/holo_green_dark"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_check" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>


